--- a/Assessment_template.tex
+++ b/Assessment_template.tex
@@ -1029,13 +1029,14 @@ population of possible cells (greater than 11,000) distributed from the
 Mexican to the Canadian border.
 
 The data from the NWFSC shelf-slope survey was analyzed using a spatial
-delta-generalized linear mixed model (delta-GLMM) ({\textbf{???}}).
-Predicted fish biomass density is derived as the product of a ``delta''
-portion for the probability of a non-zero catch and a second portion for
-the magnitude of the non-zero catches. Further, the geostatistical GLMM
-framework can accommodate spatial autocorrelation. Additional
-information about the approach and the software package it is
-implemented in are available from www.fishstats.org. \hl{describe VAST}
+delta-generalized linear mixed model (delta-GLMM) (Thorson and Barnett
+\protect\hyperlink{ref-thorson_comparing_2017}{2017}). Predicted fish
+biomass density is derived as the product of a ``delta'' portion for the
+probability of a non-zero catch and a second portion for the magnitude
+of the non-zero catches. Further, the geostatistical GLMM framework can
+accommodate spatial autocorrelation. Additional information about the
+approach and the software package it is implemented in are available
+from www.fishstats.org. \hl{describe VAST}
 
 The estimated index of abundance is shown in Table
 \ref{tab:Index_Summary}.
@@ -1191,11 +1192,12 @@ theoretical relationship) developed separately for female and male
 Pacific ocean perch. This assessment also applied a prior on natural
 mortality. However, the prior and standard deviation were generated as a
 non-linear function of maximum age as developed by Then et al.
-({\textbf{???}}) and modified by Owen Hamel which greatly improved the
-fit to the underlying age data to create the `Hamel-Then' prior. A
-maximum age of 100 was used in the developement of the prior where
-female natural moratility was set equal to 0.05 and male natural
-mortality estimated as an offset from females at 0.054.
+(\protect\hyperlink{ref-then_evaluating_2015}{2015}) and modified by
+Owen Hamel which greatly improved the fit to the underlying age data to
+create the `Hamel-Then' prior. A maximum age of 100 was used in the
+developement of the prior where female natural moratility was set equal
+to 0.05 and male natural mortality estimated as an offset from females
+at 0.054.
 
 \vspace{.5cm}
 
@@ -2227,138 +2229,148 @@ TOTAL\_like & - & - & - & - & - & - & - & - \\
 
 \newpage
 
-\begin{longtable}{c>{\centering}p{.6in}>{\centering}p{.6in}>{\centering}p{.6in}>{\centering}p{.6in}>{\centering}p{.8in}>{\centering}p{.8in}c}
-\caption{Time-series of population estimates 
-                                        from the base model.} \\ 
+\begin{longtable}{c>{\centering}p{.6in}>{\centering}p{.6in}>{\centering}p{.6in}>{\centering}p{.6in}>{\centering}p{.6in}>{\centering}p{.6in}>{\centering}p{.6in}c}
+\caption{Time-series of population estimates from the base model.} \\ 
   \hline
-Year & Total biomass (mt) & Spawning biomass (mt) & Depletion & Age-0 recruits & Total catch (mt) & Relative exploitation rate & SPR \\ 
+Year & Total biomass (mt) & Spawning output (million eggs) (mt) & Summary biomass 3+ & Relative biomass & Age-0 recruits & Total catch (mt) & 1-SPR & Relative exploitation rate \\ 
   \hline \endhead  \hline
-1892 & 100783 & 55710 & 0.00 & 7927 & 0 & 0.00 & 1.00 \\ 
-  1893 & 100783 & 55710 & 1.00 & 7927 & 0 & 0.00 & 1.00 \\ 
-  1894 & 100783 & 55710 & 1.00 & 7927 & 0 & 0.00 & 1.00 \\ 
-  1895 & 100784 & 55710 & 1.00 & 7927 & 0 & 0.00 & 1.00 \\ 
-  1896 & 100784 & 55710 & 1.00 & 7927 & 0 & 0.00 & 1.00 \\ 
-  1897 & 100784 & 55710 & 1.00 & 7927 & 0 & 0.00 & 1.00 \\ 
-  1898 & 100784 & 55710 & 1.00 & 7927 & 0 & 0.00 & 1.00 \\ 
-  1899 & 100784 & 55710 & 1.00 & 7927 & 0 & 0.00 & 1.00 \\ 
-  1900 & 100784 & 55710 & 1.00 & 7927 & 0 & 0.00 & 1.00 \\ 
-  1901 & 100784 & 55710 & 1.00 & 7927 & 0 & 0.00 & 1.00 \\ 
-  1902 & 100784 & 55710 & 1.00 & 7927 & 0 & 0.00 & 1.00 \\ 
-  1903 & 100784 & 55710 & 1.00 & 7927 & 0 & 0.00 & 1.00 \\ 
-  1904 & 100784 & 55710 & 1.00 & 7927 & 0 & 0.00 & 1.00 \\ 
-  1905 & 100784 & 55710 & 1.00 & 7927 & 0 & 0.00 & 1.00 \\ 
-  1906 & 100784 & 55710 & 1.00 & 7927 & 0 & 0.00 & 1.00 \\ 
-  1907 & 100784 & 55710 & 1.00 & 7927 & 0 & 0.00 & 1.00 \\ 
-  1908 & 100784 & 55710 & 1.00 & 7927 & 0 & 0.00 & 1.00 \\ 
-  1909 & 100784 & 55710 & 1.00 & 7927 & 0 & 0.00 & 1.00 \\ 
-  1910 & 100784 & 55710 & 1.00 & 7927 & 0 & 0.00 & 1.00 \\ 
-  1911 & 100784 & 55710 & 1.00 & 7927 & 0 & 0.00 & 1.00 \\ 
-  1912 & 100784 & 55710 & 1.00 & 7927 & 0 & 0.00 & 1.00 \\ 
-  1913 & 100784 & 55710 & 1.00 & 7927 & 0 & 0.00 & 1.00 \\ 
-  1914 & 100784 & 55710 & 1.00 & 7927 & 0 & 0.00 & 1.00 \\ 
-  1915 & 100784 & 55710 & 1.00 & 7927 & 0 & 0.00 & 1.00 \\ 
-  1916 & 100782 & 55710 & 1.00 & 7927 & 0 & 0.00 & 1.00 \\ 
-  1917 & 100781 & 55710 & 1.00 & 7927 & 0 & 0.00 & 1.00 \\ 
-  1918 & 100779 & 55710 & 1.00 & 7927 & 0 & 0.00 & 1.00 \\ 
-  1919 & 100781 & 55709 & 1.00 & 7927 & 0 & 0.00 & 1.00 \\ 
-  1920 & 100781 & 55709 & 1.00 & 7927 & 0 & 0.00 & 1.00 \\ 
-  1921 & 100782 & 55709 & 1.00 & 7927 & 0 & 0.00 & 1.00 \\ 
-  1922 & 100782 & 55709 & 1.00 & 7927 & 0 & 0.00 & 1.00 \\ 
-  1923 & 100781 & 55709 & 1.00 & 7927 & 0 & 0.00 & 1.00 \\ 
-  1924 & 100780 & 55709 & 1.00 & 7927 & 0 & 0.00 & 1.00 \\ 
-  1925 & 100779 & 55709 & 1.00 & 7927 & 0 & 0.00 & 1.00 \\ 
-  1926 & 100778 & 55709 & 1.00 & 7927 & 0 & 0.00 & 1.00 \\ 
-  1927 & 100779 & 55709 & 1.00 & 7927 & 0 & 0.00 & 1.00 \\ 
-  1928 & 100779 & 55709 & 1.00 & 7927 & 0 & 0.00 & 1.00 \\ 
-  1929 & 100753 & 55709 & 1.00 & 7927 & 1 & 0.00 & 1.00 \\ 
-  1930 & 100753 & 55708 & 1.00 & 7927 & 1 & 0.00 & 1.00 \\ 
-  1931 & 100752 & 55707 & 1.00 & 7927 & 1 & 0.00 & 1.00 \\ 
-  1932 & 100759 & 55706 & 1.00 & 9343 & 1 & 0.00 & 1.00 \\ 
-  1933 & 100615 & 55706 & 1.00 & 9366 & 8 & 0.00 & 1.00 \\ 
-  1934 & 100563 & 55701 & 1.00 & 9396 & 10 & 0.00 & 1.00 \\ 
-  1935 & 100685 & 55696 & 1.00 & 9444 & 4 & 0.00 & 1.00 \\ 
-  1936 & 100650 & 55694 & 1.00 & 9515 & 6 & 0.00 & 1.00 \\ 
-  1937 & 100575 & 55714 & 1.00 & 9611 & 9 & 0.00 & 1.00 \\ 
-  1938 & 100246 & 55774 & 1.00 & 9713 & 24 & 0.00 & 0.99 \\ 
-  1939 & 99816 & 55884 & 1.00 & 9786 & 44 & 0.00 & 0.99 \\ 
-  1940 & 99263 & 56041 & 1.01 & 9822 & 70 & 0.00 & 0.98 \\ 
-  1941 & 99029 & 56229 & 1.01 & 9801 & 81 & 0.00 & 0.98 \\ 
-  1942 & 98281 & 56431 & 1.01 & 9745 & 118 & 0.00 & 0.97 \\ 
-  1943 & 83720 & 56627 & 1.02 & 9707 & 939 & 0.01 & 0.80 \\ 
-  1944 & 76066 & 56379 & 1.01 & 9701 & 1487 & 0.01 & 0.72 \\ 
-  1945 & 53519 & 55863 & 1.00 & 9856 & 3963 & 0.04 & 0.46 \\ 
-  1946 & 68711 & 54010 & 0.97 & 10094 & 2043 & 0.02 & 0.63 \\ 
-  1947 & 80026 & 53290 & 0.96 & 10671 & 1130 & 0.01 & 0.76 \\ 
-  1948 & 74689 & 53116 & 0.95 & 11430 & 1515 & 0.02 & 0.70 \\ 
-  1949 & 72991 & 52744 & 0.95 & 11792 & 1641 & 0.02 & 0.68 \\ 
-  1950 & 78608 & 52320 & 0.94 & 11437 & 1212 & 0.01 & 0.75 \\ 
-  1951 & 76247 & 52164 & 0.94 & 10865 & 1380 & 0.01 & 0.72 \\ 
-  1952 & 65495 & 51958 & 0.93 & 19335 & 2290 & 0.02 & 0.60 \\ 
-  1953 & 72784 & 51314 & 0.92 & 14609 & 1624 & 0.02 & 0.68 \\ 
-  1954 & 64609 & 51127 & 0.92 & 11544 & 2349 & 0.02 & 0.59 \\ 
-  1955 & 71043 & 50630 & 0.91 & 9520 & 1750 & 0.02 & 0.66 \\ 
-  1956 & 59137 & 50530 & 0.91 & 8156 & 2928 & 0.03 & 0.52 \\ 
-  1957 & 63066 & 49947 & 0.90 & 7033 & 2470 & 0.03 & 0.57 \\ 
-  1958 & 69061 & 49791 & 0.89 & 6051 & 1907 & 0.02 & 0.64 \\ 
-  1959 & 79665 & 50099 & 0.90 & 5707 & 1121 & 0.01 & 0.76 \\ 
-  1960 & 69083 & 50870 & 0.91 & 6975 & 1970 & 0.02 & 0.64 \\ 
-  1961 & 61147 & 51055 & 0.92 & 11246 & 2794 & 0.03 & 0.55 \\ 
-  1962 & 54345 & 50517 & 0.91 & 10739 & 3646 & 0.04 & 0.47 \\ 
-  1963 & 45920 & 49243 & 0.88 & 6541 & 4964 & 0.05 & 0.38 \\ 
-  1964 & 42711 & 47051 & 0.84 & 4695 & 5386 & 0.06 & 0.34 \\ 
-  1965 & 35553 & 44581 & 0.80 & 3786 & 6868 & 0.08 & 0.27 \\ 
-  1966 & 17624 & 41350 & 0.74 & 3211 & 18204 & 0.23 & 0.09 \\ 
-  1967 & 17589 & 31953 & 0.57 & 2821 & 13853 & 0.23 & 0.09 \\ 
-  1968 & 20276 & 25027 & 0.45 & 3048 & 8639 & 0.18 & 0.11 \\ 
-  1969 & 51122 & 21045 & 0.38 & 4659 & 1651 & 0.04 & 0.44 \\ 
-  1970 & 43362 & 20878 & 0.37 & 8530 & 2258 & 0.06 & 0.35 \\ 
-  1971 & 47437 & 20200 & 0.36 & 4462 & 1882 & 0.05 & 0.39 \\ 
-  1972 & 47138 & 19544 & 0.35 & 2259 & 1867 & 0.05 & 0.39 \\ 
-  1973 & 38082 & 18804 & 0.34 & 1641 & 2622 & 0.07 & 0.29 \\ 
-  1974 & 40190 & 17681 & 0.32 & 1927 & 2254 & 0.06 & 0.32 \\ 
-  1975 & 55510 & 16921 & 0.30 & 2448 & 1167 & 0.04 & 0.48 \\ 
-  1976 & 49162 & 16880 & 0.30 & 1938 & 1479 & 0.05 & 0.41 \\ 
-  1977 & 62681 & 16706 & 0.30 & 2613 & 845 & 0.03 & 0.56 \\ 
-  1978 & 44368 & 16784 & 0.30 & 2678 & 1770 & 0.06 & 0.36 \\ 
-  1979 & 51644 & 16168 & 0.29 & 2780 & 1277 & 0.04 & 0.44 \\ 
-  1980 & 46969 & 15641 & 0.28 & 2076 & 1505 & 0.05 & 0.39 \\ 
-  1981 & 47564 & 14899 & 0.27 & 4098 & 1399 & 0.05 & 0.40 \\ 
-  1982 & 52723 & 14237 & 0.26 & 2945 & 1090 & 0.04 & 0.45 \\ 
-  1983 & 41457 & 13829 & 0.25 & 2352 & 1636 & 0.06 & 0.33 \\ 
-  1984 & 39768 & 13174 & 0.24 & 2598 & 1647 & 0.07 & 0.31 \\ 
-  1985 & 40304 & 12506 & 0.22 & 3272 & 1512 & 0.06 & 0.32 \\ 
-  1986 & 40186 & 11889 & 0.21 & 1379 & 1441 & 0.06 & 0.31 \\ 
-  1987 & 43639 & 11293 & 0.20 & 2154 & 1188 & 0.06 & 0.35 \\ 
-  1988 & 37261 & 10860 & 0.19 & 2496 & 1500 & 0.07 & 0.28 \\ 
-  1989 & 33263 & 10276 & 0.18 & 2899 & 1709 & 0.09 & 0.24 \\ 
-  1990 & 39356 & 9600 & 0.17 & 2561 & 1247 & 0.07 & 0.30 \\ 
-  1991 & 32621 & 9162 & 0.16 & 2890 & 1609 & 0.09 & 0.23 \\ 
-  1992 & 32032 & 8524 & 0.15 & 778 & 1639 & 0.10 & 0.22 \\ 
-  1993 & 31822 & 7844 & 0.14 & 994 & 1447 & 0.09 & 0.23 \\ 
-  1994 & 34361 & 7326 & 0.13 & 3068 & 1223 & 0.08 & 0.25 \\ 
-  1995 & 38546 & 6937 & 0.12 & 2024 & 963 & 0.07 & 0.30 \\ 
-  1996 & 39957 & 6735 & 0.12 & 1006 & 878 & 0.06 & 0.31 \\ 
-  1997 & 44156 & 6581 & 0.12 & 1029 & 727 & 0.05 & 0.36 \\ 
-  1998 & 43293 & 6475 & 0.12 & 1988 & 747 & 0.06 & 0.35 \\ 
-  1999 & 49274 & 6320 & 0.11 & 5212 & 578 & 0.05 & 0.41 \\ 
-  2000 & 79382 & 6239 & 0.11 & 5099 & 150 & 0.01 & 0.75 \\ 
-  2001 & 67772 & 6382 & 0.11 & 2402 & 276 & 0.02 & 0.62 \\ 
-  2002 & 79349 & 6470 & 0.12 & 1448 & 156 & 0.01 & 0.75 \\ 
-  2003 & 81702 & 6623 & 0.12 & 544 & 138 & 0.01 & 0.78 \\ 
-  2004 & 83095 & 6828 & 0.12 & 2382 & 129 & 0.01 & 0.80 \\ 
-  2005 & 91186 & 7115 & 0.13 & 2514 & 66 & 0.00 & 0.89 \\ 
-  2006 & 90676 & 7521 & 0.13 & 1451 & 75 & 0.00 & 0.88 \\ 
-  2007 & 84445 & 7974 & 0.14 & 1505 & 138 & 0.01 & 0.81 \\ 
-  2008 & 83818 & 8344 & 0.15 & 48465 & 151 & 0.01 & 0.80 \\ 
-  2009 & 82838 & 8589 & 0.15 & 9731 & 168 & 0.01 & 0.79 \\ 
-  2010 & 83802 & 8719 & 0.16 & 3848 & 161 & 0.01 & 0.80 \\ 
-  2011 & 93801 & 8817 & 0.16 & 14688 & 60 & 0.00 & 0.92 \\ 
-  2012 & 94217 & 9021 & 0.16 & 2574 & 59 & 0.00 & 0.92 \\ 
-  2013 & 94864 & 10051 & 0.18 & 29963 & 57 & 0.00 & 0.93 \\ 
-  2014 & 96663 & 11807 & 0.21 & 2279 & 46 & 0.00 & 0.95 \\ 
-  2015 & 96270 & 14162 & 0.25 & 3756 & 60 & 0.00 & 0.95 \\ 
-  2016 & 97103 & 16713 & 0.30 & 4228 & 58 & 0.00 & 0.96 \\ 
-  2017 & 58280 & 18909 & 0.34 & 4583 &  &  &  \\ 
+1892 & 100784 & 55710 & 100260.00 & 1.00 & 7927 & 0.0 & 0.00 & 0.00 \\ 
+  1893 & 100784 & 55710 & 100260.00 & 1.00 & 7927 & 0.1 & 0.00 & 0.00 \\ 
+  1894 & 100784 & 55710 & 100260.00 & 1.00 & 7927 & 0.1 & 0.00 & 0.00 \\ 
+  1895 & 100784 & 55710 & 100260.00 & 1.00 & 7927 & 0.1 & 0.00 & 0.00 \\ 
+  1896 & 100784 & 55710 & 100260.00 & 1.00 & 7927 & 0.0 & 0.00 & 0.00 \\ 
+  1897 & 100784 & 55710 & 100260.00 & 1.00 & 7927 & 0.0 & 0.00 & 0.00 \\ 
+  1898 & 100784 & 55710 & 100260.00 & 1.00 & 7927 & 0.0 & 0.00 & 0.00 \\ 
+  1899 & 100784 & 55710 & 100260.00 & 1.00 & 7927 & 0.0 & 0.00 & 0.00 \\ 
+  1900 & 100784 & 55710 & 100260.00 & 1.00 & 7927 & 0.0 & 0.00 & 0.00 \\ 
+  1901 & 100784 & 55710 & 100260.00 & 1.00 & 7927 & 0.0 & 0.00 & 0.00 \\ 
+  1902 & 100784 & 55710 & 100260.00 & 1.00 & 7927 & 0.0 & 0.00 & 0.00 \\ 
+  1903 & 100784 & 55710 & 100260.00 & 1.00 & 7927 & 0.0 & 0.00 & 0.00 \\ 
+  1904 & 100784 & 55710 & 100260.00 & 1.00 & 7927 & 0.0 & 0.00 & 0.00 \\ 
+  1905 & 100784 & 55710 & 100260.00 & 1.00 & 7927 & 0.0 & 0.00 & 0.00 \\ 
+  1906 & 100784 & 55710 & 100260.00 & 1.00 & 7927 & 0.0 & 0.00 & 0.00 \\ 
+  1907 & 100784 & 55710 & 100260.00 & 1.00 & 7927 & 0.0 & 0.00 & 0.00 \\ 
+  1908 & 100784 & 55710 & 100260.00 & 1.00 & 7927 & 0.0 & 0.00 & 0.00 \\ 
+  1909 & 100784 & 55710 & 100260.00 & 1.00 & 7927 & 0.0 & 0.00 & 0.00 \\ 
+  1910 & 100784 & 55710 & 100260.00 & 1.00 & 7927 & 0.0 & 0.00 & 0.00 \\ 
+  1911 & 100784 & 55710 & 100260.00 & 1.00 & 7927 & 0.0 & 0.00 & 0.00 \\ 
+  1912 & 100784 & 55710 & 100260.00 & 1.00 & 7927 & 0.0 & 0.00 & 0.00 \\ 
+  1913 & 100784 & 55710 & 100260.00 & 1.00 & 7927 & 0.0 & 0.00 & 0.00 \\ 
+  1914 & 100784 & 55710 & 100260.00 & 1.00 & 7927 & 0.0 & 0.00 & 0.00 \\ 
+  1915 & 100784 & 55710 & 100260.00 & 1.00 & 7927 & 0.0 & 0.00 & 0.00 \\ 
+  1916 & 100784 & 55710 & 100260.00 & 1.00 & 7927 & 0.0 & 0.00 & 0.00 \\ 
+  1917 & 100784 & 55710 & 100259.00 & 1.00 & 7927 & 0.1 & 0.00 & 0.00 \\ 
+  1918 & 100784 & 55710 & 100259.00 & 1.00 & 7927 & 0.2 & 0.00 & 0.00 \\ 
+  1919 & 100784 & 55709 & 100259.00 & 1.00 & 7927 & 0.2 & 0.00 & 0.00 \\ 
+  1920 & 100784 & 55709 & 100259.00 & 1.00 & 7927 & 0.1 & 0.00 & 0.00 \\ 
+  1921 & 100783 & 55709 & 100259.00 & 1.00 & 7927 & 0.1 & 0.00 & 0.00 \\ 
+  1922 & 100783 & 55709 & 100259.00 & 1.00 & 7927 & 0.1 & 0.00 & 0.00 \\ 
+  1923 & 100783 & 55709 & 100259.00 & 1.00 & 7927 & 0.1 & 0.00 & 0.00 \\ 
+  1924 & 100783 & 55709 & 100259.00 & 1.00 & 7927 & 0.1 & 0.00 & 0.00 \\ 
+  1925 & 100783 & 55709 & 100258.00 & 1.00 & 7927 & 0.2 & 0.00 & 0.00 \\ 
+  1926 & 100783 & 55709 & 100258.00 & 1.00 & 7927 & 0.2 & 0.00 & 0.00 \\ 
+  1927 & 100783 & 55709 & 100258.00 & 1.00 & 7927 & 0.3 & 0.00 & 0.00 \\ 
+  1928 & 100782 & 55709 & 100258.00 & 1.00 & 7927 & 0.3 & 0.00 & 0.00 \\ 
+  1929 & 100782 & 55709 & 100258.00 & 1.00 & 7927 & 0.3 & 0.01 & 0.00 \\ 
+  1930 & 100781 & 55708 & 100256.00 & 1.00 & 7927 & 1.4 & 0.00 & 0.00 \\ 
+  1931 & 100780 & 55707 & 100255.00 & 1.00 & 7927 & 1.4 & 0.00 & 0.00 \\ 
+  1932 & 100781 & 55706 & 100254.00 & 1.00 & 9343 & 1.4 & 0.00 & 0.00 \\ 
+  1933 & 100801 & 55706 & 100253.00 & 1.00 & 9366 & 1.1 & 0.01 & 0.00 \\ 
+  1934 & 100864 & 55701 & 100245.00 & 1.00 & 9396 & 7.6 & 0.02 & 0.00 \\ 
+  1935 & 101019 & 55696 & 100398.00 & 1.00 & 9444 & 10.0 & 0.03 & 0.00 \\ 
+  1936 & 101256 & 55694 & 100634.00 & 1.00 & 9515 & 4.5 & 0.04 & 0.00 \\ 
+  1937 & 101570 & 55714 & 100944.00 & 1.00 & 9611 & 6.1 & 0.06 & 0.00 \\ 
+  1938 & 101956 & 55774 & 101324.00 & 1.00 & 9713 & 9.4 & 0.39 & 0.00 \\ 
+  1939 & 102396 & 55884 & 101759.00 & 1.00 & 9786 & 24.4 & 0.57 & 0.00 \\ 
+  1940 & 102882 & 56041 & 102238.00 & 1.01 & 9822 & 44.2 & 1.08 & 0.00 \\ 
+  1941 & 103400 & 56229 & 102752.00 & 1.01 & 9801 & 70.0 & 0.73 & 0.00 \\ 
+  1942 & 103955 & 56431 & 103306.00 & 1.01 & 9745 & 81.3 & 0.48 & 0.00 \\ 
+  1943 & 104512 & 56627 & 103865.00 & 1.02 & 9707 & 117.5 & 0.60 & 0.00 \\ 
+  1944 & 104281 & 56379 & 103637.00 & 1.01 & 9701 & 938.7 & 0.64 & 0.01 \\ 
+  1945 & 103543 & 55863 & 102900.00 & 1.00 & 9856 & 1487.0 & 0.51 & 0.01 \\ 
+  1946 & 100396 & 54010 & 99751.30 & 0.97 & 10094 & 3962.7 & 0.56 & 0.04 \\ 
+  1947 & 99267 & 53290 & 98609.70 & 0.96 & 10671 & 2043.1 & 0.81 & 0.02 \\ 
+  1948 & 99127 & 53116 & 98447.70 & 0.95 & 11430 & 1129.5 & 0.64 & 0.01 \\ 
+  1949 & 98688 & 52744 & 97968.50 & 0.95 & 11792 & 1514.7 & 0.83 & 0.02 \\ 
+  1950 & 98246 & 52320 & 97484.40 & 0.94 & 11437 & 1640.7 & 0.68 & 0.02 \\ 
+  1951 & 98368 & 52164 & 97594.70 & 0.94 & 10865 & 1212.2 & 0.95 & 0.01 \\ 
+  1952 & 98452 & 51958 & 97686.70 & 0.93 & 19335 & 1379.5 & 0.86 & 0.01 \\ 
+  1953 & 97805 & 51314 & 96954.10 & 0.92 & 14609 & 2290.4 & 0.73 & 0.02 \\ 
+  1954 & 98119 & 51127 & 96925.50 & 0.92 & 11544 & 1624.3 & 0.48 & 0.02 \\ 
+  1955 & 98110 & 50630 & 97199.30 & 0.91 & 9520 & 2349.1 & 0.73 & 0.02 \\ 
+  1956 & 98748 & 50530 & 98020.80 & 0.91 & 8156 & 1749.6 & 0.91 & 0.02 \\ 
+  1957 & 98141 & 49947 & 97536.00 & 0.90 & 7033 & 2927.8 & 1.06 & 0.03 \\ 
+  1958 & 97826 & 49791 & 97307.60 & 0.89 & 6051 & 2470.3 & 1.24 & 0.03 \\ 
+  1959 & 97815 & 50099 & 97366.80 & 0.90 & 5707 & 1906.5 & 1.31 & 0.02 \\ 
+  1960 & 98257 & 50870 & 97859.10 & 0.91 & 6975 & 1120.6 & 1.47 & 0.01 \\ 
+  1961 & 97517 & 51055 & 97108.80 & 0.92 & 11246 & 1969.7 & 1.82 & 0.02 \\ 
+  1962 & 95725 & 50517 & 95193.30 & 0.91 & 10739 & 2794.1 & 1.82 & 0.03 \\ 
+  1963 & 93027 & 49243 & 92300.30 & 0.88 & 6541 & 3646.3 & 1.77 & 0.04 \\ 
+  1964 & 89078 & 47051 & 88442.20 & 0.84 & 4695 & 4964.2 & 1.13 & 0.06 \\ 
+  1965 & 84664 & 44581 & 84264.20 & 0.80 & 3786 & 5386.5 & 1.30 & 0.06 \\ 
+  1966 & 78617 & 41350 & 78322.80 & 0.74 & 3211 & 6868.4 & 1.21 & 0.09 \\ 
+  1967 & 61184 & 31953 & 60944.70 & 0.57 & 2821 & 18204.4 & 1.22 & 0.30 \\ 
+  1968 & 48240 & 25027 & 48034.20 & 0.45 & 3048 & 13853.2 & 1.41 & 0.29 \\ 
+  1969 & 40559 & 21045 & 40365.40 & 0.38 & 4659 & 8638.5 & 1.37 & 0.21 \\ 
+  1970 & 39794 & 20878 & 39557.30 & 0.37 & 8530 & 1650.9 & 1.04 & 0.04 \\ 
+  1971 & 38402 & 20200 & 38037.20 & 0.36 & 4462 & 2258.5 & 1.17 & 0.06 \\ 
+  1972 & 37460 & 19544 & 36968.70 & 0.35 & 2259 & 1882.1 & 0.87 & 0.05 \\ 
+  1973 & 36612 & 18804 & 36355.40 & 0.34 & 1641 & 1866.5 & 1.28 & 0.05 \\ 
+  1974 & 34887 & 17681 & 34746.80 & 0.32 & 1927 & 2622.5 & 1.12 & 0.08 \\ 
+  1975 & 33397 & 16921 & 33282.60 & 0.30 & 2448 & 2253.9 & 1.22 & 0.07 \\ 
+  1976 & 32876 & 16880 & 32740.30 & 0.30 & 1938 & 1167.5 & 1.21 & 0.04 \\ 
+  1977 & 31935 & 16706 & 31780.20 & 0.30 & 2613 & 1478.8 & 1.10 & 0.05 \\ 
+  1978 & 31533 & 16784 & 31392.90 & 0.30 & 2678 & 844.8 & 1.34 & 0.03 \\ 
+  1979 & 30123 & 16168 & 29948.70 & 0.29 & 2780 & 1770.4 & 1.38 & 0.06 \\ 
+  1980 & 29170 & 15641 & 28992.80 & 0.28 & 2076 & 1277.5 & 1.37 & 0.04 \\ 
+  1981 & 27968 & 14899 & 27791.30 & 0.27 & 4098 & 1504.8 & 1.37 & 0.05 \\ 
+  1982 & 26870 & 14237 & 26701.20 & 0.26 & 2945 & 1399.4 & 1.29 & 0.05 \\ 
+  1983 & 26106 & 13829 & 25855.40 & 0.25 & 2352 & 1089.6 & 1.43 & 0.04 \\ 
+  1984 & 24866 & 13174 & 24680.80 & 0.24 & 2598 & 1636.2 & 1.52 & 0.07 \\ 
+  1985 & 23634 & 12506 & 23472.50 & 0.22 & 3272 & 1647.0 & 1.39 & 0.07 \\ 
+  1986 & 22565 & 11889 & 22386.30 & 0.21 & 1379 & 1511.5 & 1.53 & 0.07 \\ 
+  1987 & 21605 & 11293 & 21418.30 & 0.20 & 2154 & 1440.7 & 1.55 & 0.07 \\ 
+  1988 & 20911 & 10860 & 20805.80 & 0.19 & 2496 & 1187.5 & 1.55 & 0.06 \\ 
+  1989 & 19873 & 10276 & 19723.80 & 0.18 & 2899 & 1499.6 & 1.50 & 0.08 \\ 
+  1990 & 18655 & 9600 & 18484.30 & 0.17 & 2561 & 1709.4 & 1.41 & 0.09 \\ 
+  1991 & 17939 & 9162 & 17751.80 & 0.16 & 2890 & 1246.5 & 1.37 & 0.07 \\ 
+  1992 & 16895 & 8524 & 16724.40 & 0.15 & 778 & 1608.6 & 1.28 & 0.10 \\ 
+  1993 & 15854 & 7844 & 15697.80 & 0.14 & 994 & 1639.2 & 1.30 & 0.10 \\ 
+  1994 & 14972 & 7326 & 14912.90 & 0.13 & 3068 & 1447.3 & 1.17 & 0.10 \\ 
+  1995 & 14260 & 6937 & 14161.80 & 0.12 & 2024 & 1223.1 & 0.50 & 0.09 \\ 
+  1996 & 13809 & 6735 & 13625.70 & 0.12 & 1006 & 962.6 & 0.76 & 0.07 \\ 
+  1997 & 13467 & 6581 & 13349.80 & 0.12 & 1029 & 877.9 & 0.49 & 0.07 \\ 
+  1998 & 13225 & 6475 & 13156.10 & 0.12 & 1988 & 726.7 & 0.44 & 0.06 \\ 
+  1999 & 12918 & 6320 & 12827.00 & 0.11 & 5212 & 747.2 & 0.41 & 0.06 \\ 
+  2000 & 12802 & 6239 & 12616.40 & 0.11 & 5099 & 577.6 & 0.22 & 0.05 \\ 
+  2001 & 13226 & 6382 & 12889.40 & 0.11 & 2402 & 149.5 & 0.23 & 0.01 \\ 
+  2002 & 13697 & 6470 & 13406.90 & 0.12 & 1448 & 276.2 & 0.38 & 0.02 \\ 
+  2003 & 14344 & 6623 & 14202.60 & 0.12 & 544 & 156.1 & 0.40 & 0.01 \\ 
+  2004 & 14955 & 6828 & 14870.00 & 0.12 & 2382 & 137.7 & 0.41 & 0.01 \\ 
+  2005 & 15509 & 7115 & 15441.50 & 0.13 & 2514 & 128.8 & 0.40 & 0.01 \\ 
+  2006 & 16065 & 7521 & 15907.60 & 0.14 & 1451 & 66.5 & 0.16 & 0.00 \\ 
+  2007 & 16603 & 7974 & 16453.90 & 0.14 & 1505 & 74.5 & 0.15 & 0.00 \\ 
+  2008 & 17125 & 8344 & 16925.80 & 0.15 & 48465 & 137.5 & 0.14 & 0.01 \\ 
+  2009 & 18052 & 8589 & 17248.10 & 0.15 & 9731 & 150.8 & 0.10 & 0.01 \\ 
+  2010 & 20036 & 8719 & 17491.60 & 0.16 & 3848 & 168.4 & 0.11 & 0.01 \\ 
+  2011 & 23634 & 8817 & 23065.10 & 0.16 & 14688 & 160.9 & 0.09 & 0.01 \\ 
+  2012 & 27110 & 9021 & 26699.30 & 0.16 & 2574 & 60.4 & 0.97 & 0.00 \\ 
+  2013 & 30798 & 10051 & 29969.80 & 0.18 & 29963 & 58.8 & 0.97 & 0.00 \\ 
+  2014 & 34891 & 11807 & 34321.00 & 0.21 & 2279 & 57.2 & 0.97 & 0.00 \\ 
+  2015 & 39107 & 14162 & 37585.20 & 0.25 & 3756 & 45.6 & 0.97 & 0.00 \\ 
+  2016 & 43737 & 16713 & 43560.00 & 0.30 & 4228 & 60.2 & 0.97 & 0.00 \\ 
+  2017 & 47589 & 18909 & 47331.80 & 0.34 & 4583 & 57.6 & 0.97 & 0.00 \\ 
+  2018 & 49797 & 20169 & 49511.20 & 0.36 & 4773 & - & - & - \\ 
+  2019 & 51393 & 21186 & 51086.60 & 0.38 & 4921 & - & - & - \\ 
+  2020 & 52413 & 22238 & 52094.30 & 0.40 & 5067 & - & - & - \\ 
+  2021 & 52921 & 23473 & 52592.50 & 0.42 & 5233 & - & - & - \\ 
+  2022 & 53010 & 24463 & 52671.40 & 0.44 & 5360 & - & - & - \\ 
+  2023 & 52785 & 24949 & 52436.90 & 0.45 & 5421 & - & - & - \\ 
+  2024 & 52349 & 25060 & 51993.00 & 0.45 & 5435 & - & - & - \\ 
+  2025 & 51781 & 24883 & 51422.00 & 0.45 & 5413 & - & - & - \\ 
+  2026 & 51140 & 24888 & 50781.00 & 0.45 & 5413 & - & - & - \\ 
+  2027 & 50467 & 24916 & 50108.50 & 0.45 & 5417 & - & - & - \\ 
+  2028 & 49786 & 24850 & 49427.90 & 0.45 & 5409 & - & - & - \\ 
    \hline
 \hline
 \label{tab:Timeseries_mod1}
@@ -2705,6 +2717,20 @@ Journal of Fisheries and Aquatic Sciences \textbf{45}(1): 78--88.
 Available from
 \url{http://www.nrcresearchpress.com/doi/abs/10.1139/f88-010}
 {[}accessed 28 February 2017{]}.
+
+\hypertarget{ref-then_evaluating_2015}{}
+Then, A.Y., Hoenig, J.M., Hall, N.G., and Hewitt, D.A. 2015. Evaluating
+the predictive performance of empirical estimators of natural mortality
+rate using information on over 200 fish species. ICES Journal of Marine
+Science \textbf{72}(1): 82--92. doi:
+\href{https://doi.org/10.1093/icesjms/fsu136}{10.1093/icesjms/fsu136}.
+
+\hypertarget{ref-thorson_comparing_2017}{}
+Thorson, J.T., and Barnett, L.A.K. 2017. Comparing estimates of
+abundance trends and distribution shifts using single- and multispecies
+models of fishes and biogenic habitat. ICES Journal of Marine Science:
+Journal du Conseil: fsw193. doi:
+\href{https://doi.org/10.1093/icesjms/fsw193}{10.1093/icesjms/fsw193}.
 
 \hypertarget{ref-weinberg_estimation_2002}{}
 Weinberg, J.R., Rago, P.J., Wakefield, W.W., and Keith, C. 2002.
