--- a/BibFile.bib
+++ b/BibFile.bib
@@ -374,7 +374,7 @@
 	year = {2011}
 }
 
-@techreport{hamel_status_????,
+@techreport{hamel_status_nodate,
 	title = {Status and future prospects for the {Pacific} ocean perch resource in waters off {Washington} and {Oregon} as assessed in 2005},
 	institution = {Pacific Fishery Management Council, 7700 Ambassador Place NE, Suite 200, Portland, OR 97220},
 	author = {Hamel, Owen S.},
@@ -784,4 +784,36 @@
 	institution = {US Department of Commerce, National Oceanic and Atmospheric Adminstration, National Marine},
 	author = {Ralston, Stephen and Pearson, Don E. and Field, John C. and Key, Meisha},
 	year = {2010}
+}
+
+@article{then_evaluating_2015,
+	title = {Evaluating the predictive performance of empirical estimators of natural mortality rate using information on over 200 fish species},
+	volume = {72},
+	issn = {1054-3139, 1095-9289},
+	url = {https://academic.oup.com/icesjms/article-lookup/doi/10.1093/icesjms/fsu136},
+	doi = {10.1093/icesjms/fsu136},
+	language = {en},
+	number = {1},
+	urldate = {2017-03-17},
+	journal = {ICES Journal of Marine Science},
+	author = {Then, A. Y. and Hoenig, J. M. and Hall, N. G. and Hewitt, D. A.},
+	month = jan,
+	year = {2015},
+	pages = {82--92},
+	file = {Then et al. - 2015 - Evaluating the predictive performance of empirical.pdf:C\:\\Users\\Chantel.Wetzel\\AppData\\Roaming\\Zotero\\Zotero\\Profiles\\0u2lkieq.default\\zotero\\storage\\U2VIC4ND\\Then et al. - 2015 - Evaluating the predictive performance of empirical.pdf:application/pdf}
+}
+
+@article{thorson_comparing_2017,
+	title = {Comparing estimates of abundance trends and distribution shifts using single- and multispecies models of fishes and biogenic habitat},
+	issn = {1054-3139, 1095-9289},
+	url = {https://academic.oup.com/icesjms/article-lookup/doi/10.1093/icesjms/fsw193},
+	doi = {10.1093/icesjms/fsw193},
+	language = {en},
+	urldate = {2017-04-15},
+	journal = {ICES Journal of Marine Science: Journal du Conseil},
+	author = {Thorson, James T. and Barnett, Lewis A. K.},
+	month = jan,
+	year = {2017},
+	pages = {fsw193},
+	file = {fsw193.pdf:C\:\\Users\\Chantel.Wetzel\\AppData\\Roaming\\Zotero\\Zotero\\Profiles\\0u2lkieq.default\\zotero\\storage\\RMTENKQP\\fsw193.pdf:application/pdf}
 }
