--- a/PacificOceanPerch2017_Assessment.tex
+++ b/PacificOceanPerch2017_Assessment.tex
@@ -248,7 +248,7 @@ Year & California & Oregon & Washington & At-sea Hake & Research & Total Landing
 
 \begin{figure}
 \centering
-\includegraphics{PacificOceanPerch2017_Assessment_files/figure-latex/unnamed-chunk-3-1.pdf}
+\includegraphics{PacificOceanPerch2017_Assessment_files/figure-latex/unnamed-chunk-11-1.pdf}
 \caption{Landings of Pacific ocean perch for California, Oregon,
 Washington, the Foriegn fishery (1966-1976), At-Sea Hake fishery, and
 fishery independent surveys. \label{fig:Exec_catch1}}
@@ -859,14 +859,14 @@ Considerations}\label{life-history-and-ecosystem-considerations}
 History}\label{summary-of-management-history}
 
 \hl{Include: Summary of management history (e.g., changes in mesh sizes, trip 
-limits, or other management actions that may have significantly altered selection, 
-catch rates, or discards).}
+                                            limits, or other management actions that may have significantly altered selection, 
+                                            catch rates, or discards).}
 
 \subsection{Management Performance}\label{management-performance-1}
 
 \hl{Include: Management performance, including a table or tables comparing 
-Overfishing Limit (OFL), Annual Catch Limit (ACL), Harvest Guideline (HG) 
-[CPS only], landings, and catch (i.e., landings plus discard) for each area and year.}
+  Overfishing Limit (OFL), Annual Catch Limit (ACL), Harvest Guideline (HG) 
+  [CPS only], landings, and catch (i.e., landings plus discard) for each area and year.}
 
 Management performance table: (Table \ref{tab:mnmgt_perform})\\
 A summary of these values as well as other base case summary results can
@@ -1665,81 +1665,81 @@ Year & California & Oregon & Washington & At-Sea Hake & Foreign & Research \\
 \end{table}
 
 \begin{table}[ht]
-\centering
-\caption{Summary of discard rates used in the model by each data source.} 
-\label{tab:Discard}
-\begin{tabular}{>{\centering}p{.75in}>{\centering}p{.75in}>{\centering}p{.75in}>{\centering}p{1.1in}}
-  \hline
-Year & Source & Discard & Standard Error \\ 
-  \hline
-1985 & Pikitch & 0.027 & 0.068 \\ 
-  1986 & Pikitch & 0.024 & 0.063 \\ 
-  1987 & WCGOP & 0.039 & 0.083 \\ 
-  1992 & WCGOP & 0.100 & 0.300 \\ 
-  2002 & WCGOP & 0.150 & 0.164 \\ 
-  2003 & WCGOP & 0.183 & 0.268 \\ 
-  2004 & WCGOP & 0.203 & 0.206 \\ 
-  2005 & WCGOP & 0.175 & 0.346 \\ 
-  2006 & WCGOP & 0.148 & 0.243 \\ 
-  2007 & WCGOP & 0.171 & 0.261 \\ 
-  2008 & WCGOP & 0.362 & 0.172 \\ 
-  2009 & WCGOP & 0.504 & 0.153 \\ 
-  2010 & WCGOP & 0.487 & 0.195 \\ 
-  2011 & WCGOP & 0.015 & 0.053 \\ 
-  2012 & WCGOP & 0.028 & 0.054 \\ 
-  2013 & WCGOP & 0.027 & 0.054 \\ 
-  2014 & WCGOP & 0.035 & 0.050 \\ 
-  2015 & WCGOP & 0.010 & 0.053 \\ 
-   \hline
-\end{tabular}
-\end{table}
+  \centering
+  \caption{Summary of discard rates used in the model by each data source.} 
+  \label{tab:Discard}
+  \begin{tabular}{>{\centering}p{.75in}>{\centering}p{.75in}>{\centering}p{.75in}>{\centering}p{1.1in}}
+    \hline
+  Year & Source & Discard & Standard Error \\ 
+    \hline
+  1985 & Pikitch & 0.027 & 0.068 \\ 
+    1986 & Pikitch & 0.024 & 0.063 \\ 
+    1987 & WCGOP & 0.039 & 0.083 \\ 
+    1992 & WCGOP & 0.100 & 0.300 \\ 
+    2002 & WCGOP & 0.150 & 0.164 \\ 
+    2003 & WCGOP & 0.183 & 0.268 \\ 
+    2004 & WCGOP & 0.203 & 0.206 \\ 
+    2005 & WCGOP & 0.175 & 0.346 \\ 
+    2006 & WCGOP & 0.148 & 0.243 \\ 
+    2007 & WCGOP & 0.171 & 0.261 \\ 
+    2008 & WCGOP & 0.362 & 0.172 \\ 
+    2009 & WCGOP & 0.504 & 0.153 \\ 
+    2010 & WCGOP & 0.487 & 0.195 \\ 
+    2011 & WCGOP & 0.015 & 0.053 \\ 
+    2012 & WCGOP & 0.028 & 0.054 \\ 
+    2013 & WCGOP & 0.027 & 0.054 \\ 
+    2014 & WCGOP & 0.035 & 0.050 \\ 
+    2015 & WCGOP & 0.010 & 0.053 \\ 
+     \hline
+  \end{tabular}
+  \end{table}
 
 \begin{table}[ht]
-\centering
-\caption{Summary of commercial fishery length samples used in the stock assessment.} 
-\label{tab:Comm_Lengths}
-\begin{tabular}{>{\centering}p{.75in}>{\centering}p{.75in}>{\centering}p{.75in}>{\centering}p{1in}}
-  \hline
-Year & Trips & Fish & Sample Size \\ 
-  \hline
-1966 & 1 & 238 & 7 \\ 
-  1967 & 5 & 1020 & 35 \\ 
-  1968 & 3 & 912 & 21 \\ 
-  1969 & 4 & 1213 & 28 \\ 
-  1970 & 13 & 1830 & 92 \\ 
-  1971 & 22 & 4698 & 155 \\ 
-  1972 & 23 & 4561 & 162 \\ 
-  1973 & 17 & 4134 & 120 \\ 
-  1974 & 20 & 4806 & 141 \\ 
-  1975 & 19 & 3637 & 134 \\ 
-  1976 & 21 & 3677 & 148 \\ 
-  1977 & 32 & 4846 & 226 \\ 
-  1978 & 52 & 7715 & 367 \\ 
-  1979 & 34 & 3414 & 240 \\ 
-  1980 & 55 & 5426 & 388 \\ 
-  1981 & 40 & 3921 & 282 \\ 
-  1982 & 48 & 4824 & 339 \\ 
-  1983 & 39 & 3944 & 275 \\ 
-  1984 & 31 & 3103 & 219 \\ 
-  1985 & 45 & 4509 & 318 \\ 
-  1986 & 40 & 4005 & 282 \\ 
-  1987 & 43 & 3056 & 304 \\ 
-  1988 & 9 & 602 & 64 \\ 
-  1989 & 16 & 798 & 113 \\ 
-  1990 & 12 & 599 & 85 \\ 
-  1991 & 8 & 216 & 38 \\ 
-  1994 & 43 & 2608 & 304 \\ 
-  1995 & 49 & 3161 & 346 \\ 
-  1996 & 64 & 3085 & 452 \\ 
-  1997 & 76 & 3570 & 537 \\ 
-  1998 & 56 & 3450 & 395 \\ 
-  1999 & 58 & 2812 & 409 \\ 
-  2000 & 49 & 2004 & 326 \\ 
-  2001 & 59 & 1696 & 293 \\ 
-  2002 & 50 & 1666 & 280 \\ 
-   \hline
-\end{tabular}
-\end{table}
+  \centering
+  \caption{Summary of commercial fishery length samples used in the stock assessment.} 
+  \label{tab:Comm_Lengths}
+  \begin{tabular}{>{\centering}p{.75in}>{\centering}p{.75in}>{\centering}p{.75in}>{\centering}p{1in}}
+    \hline
+  Year & Trips & Fish & Sample Size \\ 
+    \hline
+  1966 & 1 & 238 & 7 \\ 
+    1967 & 5 & 1020 & 35 \\ 
+    1968 & 3 & 912 & 21 \\ 
+    1969 & 4 & 1213 & 28 \\ 
+    1970 & 13 & 1830 & 92 \\ 
+    1971 & 22 & 4698 & 155 \\ 
+    1972 & 23 & 4561 & 162 \\ 
+    1973 & 17 & 4134 & 120 \\ 
+    1974 & 20 & 4806 & 141 \\ 
+    1975 & 19 & 3637 & 134 \\ 
+    1976 & 21 & 3677 & 148 \\ 
+    1977 & 32 & 4846 & 226 \\ 
+    1978 & 52 & 7715 & 367 \\ 
+    1979 & 34 & 3414 & 240 \\ 
+    1980 & 55 & 5426 & 388 \\ 
+    1981 & 40 & 3921 & 282 \\ 
+    1982 & 48 & 4824 & 339 \\ 
+    1983 & 39 & 3944 & 275 \\ 
+    1984 & 31 & 3103 & 219 \\ 
+    1985 & 45 & 4509 & 318 \\ 
+    1986 & 40 & 4005 & 282 \\ 
+    1987 & 43 & 3056 & 304 \\ 
+    1988 & 9 & 602 & 64 \\ 
+    1989 & 16 & 798 & 113 \\ 
+    1990 & 12 & 599 & 85 \\ 
+    1991 & 8 & 216 & 38 \\ 
+    1994 & 43 & 2608 & 304 \\ 
+    1995 & 49 & 3161 & 346 \\ 
+    1996 & 64 & 3085 & 452 \\ 
+    1997 & 76 & 3570 & 537 \\ 
+    1998 & 56 & 3450 & 395 \\ 
+    1999 & 58 & 2812 & 409 \\ 
+    2000 & 49 & 2004 & 326 \\ 
+    2001 & 59 & 1696 & 293 \\ 
+    2002 & 50 & 1666 & 280 \\ 
+     \hline
+  \end{tabular}
+  \end{table}
 
 \begin{table}[ht]
 \centering
@@ -1766,18 +1766,18 @@ Year & Trips & Fish & Sample Size \\
 \end{table}
 
 \begin{table}[ht]
-\centering
-\caption{Summary of Pacific ocean perch survey length samples used in the stock assessment.} 
-\label{tab:POP_Lengths}
-\begin{tabular}{>{\centering}p{.75in}>{\centering}p{.75in}>{\centering}p{.75in}>{\centering}p{1in}}
-  \hline
-Year & Tows & Fish & Sample Size \\ 
-  \hline
-1979 & 125 & 2375 & 303 \\ 
-  1985 & 126 & 2558 & 306 \\ 
-   \hline
-\end{tabular}
-\end{table}
+  \centering
+  \caption{Summary of Pacific ocean perch survey length samples used in the stock assessment.} 
+  \label{tab:POP_Lengths}
+  \begin{tabular}{>{\centering}p{.75in}>{\centering}p{.75in}>{\centering}p{.75in}>{\centering}p{1in}}
+    \hline
+  Year & Tows & Fish & Sample Size \\ 
+    \hline
+  1979 & 125 & 2375 & 303 \\ 
+    1985 & 126 & 2558 & 306 \\ 
+     \hline
+  \end{tabular}
+  \end{table}
 
 \begin{table}[ht]
 \centering
@@ -1958,42 +1958,42 @@ Year & Tows & Fish & Sample Size \\
 \end{table}
 
 \begin{table}[ht]
-\centering
-\caption{Summary of the commercial catch-per-unit effort
-                                              time-series used in the stock
-                                              assessment.} 
-\label{tab:CPUE_Summary}
-\begin{tabular}{>{\centering}p{.5in}>{\centering}p{.7in}>{\centering}p{.7in}}
-  \hline
-Year & Obs & SE \\ 
-  \hline
-1956 & 0.40 & 0.40 \\ 
-  1957 & 0.30 & 0.40 \\ 
-  1958 & 0.32 & 0.40 \\ 
-  1959 & 0.29 & 0.40 \\ 
-  1960 & 0.28 & 0.40 \\ 
-  1961 & 0.31 & 0.40 \\ 
-  1962 & 0.29 & 0.40 \\ 
-  1963 & 0.34 & 0.40 \\ 
-  1964 & 0.35 & 0.40 \\ 
-  1965 & 0.55 & 0.40 \\ 
-  1966 & 0.47 & 0.40 \\ 
-  1967 & 0.30 & 0.40 \\ 
-  1968 & 0.17 & 0.40 \\ 
-  1969 & 0.18 & 0.40 \\ 
-  1970 & 0.17 & 0.40 \\ 
-  1971 & 0.20 & 0.40 \\ 
-  1972 & 0.20 & 0.40 \\ 
-  1973 & 0.11 & 0.40 \\ 
-   \hline
-\end{tabular}
-\end{table}
+  \centering
+  \caption{Summary of the commercial catch-per-unit effort
+                                         time-series used in the stock
+                                         assessment.} 
+  \label{tab:CPUE_Summary}
+  \begin{tabular}{>{\centering}p{.5in}>{\centering}p{.7in}>{\centering}p{.7in}}
+    \hline
+  Year & Obs & SE \\ 
+    \hline
+  1956 & 0.40 & 0.40 \\ 
+    1957 & 0.30 & 0.40 \\ 
+    1958 & 0.32 & 0.40 \\ 
+    1959 & 0.29 & 0.40 \\ 
+    1960 & 0.28 & 0.40 \\ 
+    1961 & 0.31 & 0.40 \\ 
+    1962 & 0.29 & 0.40 \\ 
+    1963 & 0.34 & 0.40 \\ 
+    1964 & 0.35 & 0.40 \\ 
+    1965 & 0.55 & 0.40 \\ 
+    1966 & 0.47 & 0.40 \\ 
+    1967 & 0.30 & 0.40 \\ 
+    1968 & 0.17 & 0.40 \\ 
+    1969 & 0.18 & 0.40 \\ 
+    1970 & 0.17 & 0.40 \\ 
+    1971 & 0.20 & 0.40 \\ 
+    1972 & 0.20 & 0.40 \\ 
+    1973 & 0.11 & 0.40 \\ 
+     \hline
+  \end{tabular}
+  \end{table}
 
 \begin{table}[ht]
 \centering
 \caption{Summary of the fishery-independant biomass/abundance
-                                              time-series used in the stock
-                                              assessment.} 
+                                         time-series used in the stock
+                                         assessment.} 
 \label{tab:Index_Summary}
 \begin{tabular}{>{\centering}p{.4in}>{\centering}p{.5in}>{\centering}p{.3in}>{\centering}p{.5in}>{\centering}p{.3in}>{\centering}p{.5in}>{\centering}p{.3in}>{\centering}p{.5in}>{\centering}p{.3in}>{\centering}p{.5in}>{\centering}p{.3in}}
   \hline
@@ -2037,17 +2037,17 @@ Year & Obs & SE \\
 \FloatBarrier
 
 \begin{landscape}
-\begin{longtable}{rlrrcccl}
+\begin{longtable}{rlrrcccll}
 \caption{List of parameters used in
-                                              the base model, including estimated 
-                                              values and standard deviations (SD), 
-                                              bounds (minimum and maximum), 
-                                              estimation phase (negative values indicate
-                                              not estimated), status (indicates if 
-                                              parameters are near bounds, and prior type
-                                              information (mean, SD).} \\ 
+                                          the base model, including estimated 
+                                          values and standard deviations (SD), 
+                                          bounds (minimum and maximum), 
+                                          estimation phase (negative values indicate
+                                          not estimated), status (indicates if 
+                                          parameters are near bounds, and prior type
+                                          information (mean, SD).} \\ 
   \hline
-No. & Parameter & Value & Phase & Bounds & Status & SD & Prior (Exp.Val, SD)  \\ 
+No. & Parameter & Value & Phase & Bounds & Status & SD & Prior (Exp.Val, SD)  & NA \\ 
   \hline 
 \endhead 
 \hline 
@@ -2055,88 +2055,88 @@ No. & Parameter & Value & Phase & Bounds & Status & SD & Prior (Exp.Val, SD)  \\
 \endfoot 
 \endlastfoot 
  \hline
-1 & NatM\_p\_1\_Fem\_GP\_1 & 0.054 & -2 & (0.02, 0.1) &  &  & Log\_Norm (-2.92, 0.44) \\ 
-  2 & L\_at\_Amin\_Fem\_GP\_1 & 21.211 & -3 & (15, 25) &  &  & None \\ 
-  3 & L\_at\_Amax\_Fem\_GP\_1 & 42.300 & 2 & (35, 45) & OK & 0.202 & None \\ 
-  4 & VonBert\_K\_Fem\_GP\_1 & 0.157 & 3 & (0.1, 0.4) & OK & 0.005 & None \\ 
-  5 & CV\_young\_Fem\_GP\_1 & 1.641 & 5 & (0.03, 5) & OK & 0.105 & None \\ 
-  6 & CV\_old\_Fem\_GP\_1 & 2.813 & 5 & (0.03, 5) & OK & 0.171 & None \\ 
-  7 & Wtlen\_1\_Fem & 0.000 & -50 & (0, 3) &  &  & None \\ 
-  8 & Wtlen\_2\_Fem & 3.109 & -50 & (2, 4) &  &  & None \\ 
-  9 & Mat50\%\_Fem & 32.100 & -50 & (20, 40) &  &  & None \\ 
-  10 & Mat\_slope\_Fem & -1.000 & -50 & (-2, 4) &  &  & None \\ 
-  11 & Eggs\_scalar\_Fem & 0.000 & -50 & (0, 6) &  &  & None \\ 
-  12 & Eggs\_exp\_len\_Fem & 4.977 & -50 & (-3, 5) &  &  & None \\ 
-  13 & NatM\_p\_1\_Mal\_GP\_1 & 0.054 & 2 & (0, 0.3) & OK & 0.038 & Normal (0.05, 0.1) \\ 
-  14 & L\_at\_Amin\_Mal\_GP\_1 & 21.211 & -2 & (6, 68) &  &  & None \\ 
-  15 & L\_at\_Amax\_Mal\_GP\_1 & 39.371 & 2 & (13, 122) & OK & 0.006 & None \\ 
-  16 & VonBert\_K\_Mal\_GP\_1 & 0.187 & 3 & (0.04, 1.09) & OK & 0.041 & None \\ 
-  17 & CV\_young\_Mal\_GP\_1 & 1.586 & 5 & (0, 742.07) & OK & 0.088 & None \\ 
-  18 & CV\_old\_Mal\_GP\_1 & 2.462 & 5 & (0, 742.07) & OK & 0.089 & None \\ 
-  19 & Wtlen\_1\_Mal & 0.000 & -50 & (0, 3) &  &  & None \\ 
-  20 & Wtlen\_2\_Mal & 3.118 & -50 & (2, 4) &  &  & None \\ 
-  24 & CohortGrowDev & 1.000 & -50 & (0, 2) &  &  & None \\ 
-  25 & FracFemale\_GP\_1 & 0.500 & -99 & (0.000001, 0.999999) &  &  & None \\ 
-  26 & SR\_LN(R0) & 9.212 & 1 & (5, 20) & OK & 0.122 & None \\ 
-  27 & SR\_BH\_steep & 0.410 & 2 & (0.2, 1) & OK & 0.099 & Full\_Beta (0.7606, 0.146) \\ 
-  28 & SR\_sigmaR & 0.700 & -6 & (0.5, 1.2) &  &  & None \\ 
-  29 & SR\_regime & 0.000 & -50 & (-5, 5) &  &  & None \\ 
-  30 & SR\_autocorr & 0.000 & -50 & (0, 2) &  &  & None \\ 
-  154 & LnQ\_base\_Fishery(1) & -12.102 & -1 & (-15, 15) &  &  & None \\ 
-  155 & LnQ\_base\_POP(4) & 0.418 & -1 & (-15, 15) &  &  & None \\ 
-  156 & LnQ\_base\_Triennial(5) & -0.992 & -1 & (-15, 15) &  &  & None \\ 
-  157 & Q\_extraSD\_Triennial(5) & 0.300 & -2 & (0, 0.5) &  &  & None \\ 
-  158 & LnQ\_base\_AFSCSlope(6) & -1.428 & -1 & (-15, 15) &  &  & None \\ 
-  159 & LnQ\_base\_NWFSCSlope(7) & -2.119 & -1 & (-15, 15) &  &  & None \\ 
-  160 & LnQ\_base\_NWFSCcombo(8) & -1.445 & -1 & (-15, 15) &  &  & None \\ 
-  161 & Q\_extraSD\_NWFSCcombo(8) & 0.300 & -2 & (0, 0.5) &  &  & None \\ 
-  162 & SizeSel\_P1\_Fishery(1) & 38.410 & 2 & (20, 45) & OK & 0.022 & None \\ 
-  163 & SizeSel\_P2\_Fishery(1) & -5.000 & -2 & (-6, 4) &  &  & None \\ 
-  164 & SizeSel\_P3\_Fishery(1) & 3.594 & 3 & (-1, 9) & OK & 0.089 & None \\ 
-  165 & SizeSel\_P4\_Fishery(1) & -9.000 & 3 & (-9, 9) & LO & 0.337 & None \\ 
-  166 & SizeSel\_P5\_Fishery(1) & -4.244 & 4 & (-5, 9) & OK & 0.272 & None \\ 
-  167 & SizeSel\_P6\_Fishery(1) & 0.605 & 2 & (-5, 9) & OK & 0.305 & None \\ 
-  168 & Retain\_P1\_Fishery(1) & 28.813 & 1 & (15, 45) & OK & 0.346 & None \\ 
-  169 & Retain\_P2\_Fishery(1) & 0.884 & 1 & (0.1, 10) & OK & 0.132 & None \\ 
-  170 & Retain\_P3\_Fishery(1) & 0.758 & 1 & (-10, 10) & OK & 31440.900 & None \\ 
-  171 & Retain\_P4\_Fishery(1) & 0.000 & -3 & (0, 0) &  &  & None \\ 
-  172 & SizeSel\_P1\_ASHOP(2) & 49.500 & 2 & (20, 49.5) & HI & 0.001 & None \\ 
-  173 & SizeSel\_P2\_ASHOP(2) & -5.000 & -2 & (-6, 4) &  &  & None \\ 
-  174 & SizeSel\_P3\_ASHOP(2) & 5.016 & 3 & (-1, 9) & OK & 0.286 & None \\ 
-  175 & SizeSel\_P4\_ASHOP(2) & 0.640 & 3 & (-1, 9) & OK & 6132.850 & None \\ 
-  176 & SizeSel\_P5\_ASHOP(2) & -4.985 & 4 & (-9, 9) & OK & 2.623 & None \\ 
-  177 & SizeSel\_P6\_ASHOP(2) & 999.000 & -2 & (-5, 999) &  &  & None \\ 
-  178 & SizeSel\_P1\_POP(4) & 24.476 & 2 & (20, 70) & OK & 2.546 & None \\ 
-  179 & SizeSel\_P2\_POP(4) & 13.195 & 3 & (0.001, 50) & OK & 4.720 & None \\ 
-  180 & SizeSel\_P1\_Triennial(5) & 28.881 & 2 & (20, 45) & OK & 3.989 & None \\ 
-  181 & SizeSel\_P2\_Triennial(5) & -5.000 & -2 & (-6, 4) &  &  & None \\ 
-  182 & SizeSel\_P3\_Triennial(5) & 3.594 & 3 & (-1, 9) & OK & 1.965 & None \\ 
-  183 & SizeSel\_P4\_Triennial(5) & 2.154 & 3 & (-1, 9) & OK & 3.104 & None \\ 
-  184 & SizeSel\_P5\_Triennial(5) & -1.013 & 4 & (-5, 9) & OK & 0.808 & None \\ 
-  185 & SizeSel\_P6\_Triennial(5) & -0.653 & 2 & (-5, 9) & OK & 0.555 & None \\ 
-  186 & SizeSel\_P1\_AFSCSlope(6) & 36.785 & 2 & (20, 45) & OK & 3.561 & None \\ 
-  187 & SizeSel\_P2\_AFSCSlope(6) & -5.000 & -2 & (-6, 4) &  &  & None \\ 
-  188 & SizeSel\_P3\_AFSCSlope(6) & 5.146 & 3 & (-1, 9) & OK & 0.736 & None \\ 
-  189 & SizeSel\_P4\_AFSCSlope(6) & 0.640 & 3 & (-1, 9) & OK & 6132.850 & None \\ 
-  190 & SizeSel\_P5\_AFSCSlope(6) & -9.000 & -4 & (-9, 9) &  &  & None \\ 
-  191 & SizeSel\_P6\_AFSCSlope(6) & 999.000 & -2 & (-5, 999) &  &  & None \\ 
-  192 & SizeSel\_P1\_NWFSCSlope(7) & 36.316 & 2 & (20, 45) & OK & 2.506 & None \\ 
-  193 & SizeSel\_P2\_NWFSCSlope(7) & -5.000 & -2 & (-6, 4) &  &  & None \\ 
-  194 & SizeSel\_P3\_NWFSCSlope(7) & 1.964 & 3 & (-1, 9) & OK & 1.851 & None \\ 
-  195 & SizeSel\_P4\_NWFSCSlope(7) & 0.640 & 3 & (-1, 9) & OK & 6132.850 & None \\ 
-  196 & SizeSel\_P5\_NWFSCSlope(7) & -9.000 & -4 & (-9, 9) &  &  & None \\ 
-  197 & SizeSel\_P6\_NWFSCSlope(7) & 999.000 & -2 & (-5, 999) &  &  & None \\ 
-  198 & SizeSel\_P1\_NWFSCcombo(8) & 49.500 & 2 & (20, 49.5) & HI & 0.009 & None \\ 
-  199 & SizeSel\_P2\_NWFSCcombo(8) & -5.000 & -2 & (-6, 4) &  &  & None \\ 
-  200 & SizeSel\_P3\_NWFSCcombo(8) & 6.518 & 3 & (-1, 9) & OK & 1.170 & None \\ 
-  201 & SizeSel\_P4\_NWFSCcombo(8) & 0.640 & 3 & (-1, 9) & OK & 6132.850 & None \\ 
-  202 & SizeSel\_P5\_NWFSCcombo(8) & -3.706 & 4 & (-9, 9) & OK & 5.924 & None \\ 
-  203 & SizeSel\_P6\_NWFSCcombo(8) & 999.000 & -2 & (-5, 999) &  &  & None \\ 
-  204 & Retain\_P3\_Fishery(1)\_BLK1repl\_1918 & 3.816 & 1 & (-10, 10) & OK & 0.071 & None \\ 
-  205 & Retain\_P3\_Fishery(1)\_BLK1repl\_1992 & 2.257 & 1 & (-10, 10) & OK & 0.353 & None \\ 
-  206 & Retain\_P3\_Fishery(1)\_BLK1repl\_2002 & 1.716 & 1 & (-10, 10) & OK & 0.122 & None \\ 
-  207 & Retain\_P3\_Fishery(1)\_BLK1repl\_2008 & 0.269 & 1 & (-10, 10) & OK & 0.175 & None \\ 
-  208 & Retain\_P3\_Fishery(1)\_BLK1repl\_2011 & 6.004 & 1 & (-10, 10) & OK & 0.711 & None \\ 
+1 & NatM\_p\_1\_Fem\_GP\_1 & 0 & -2.000 & (0.02, 0.1) &  &  & Log\_Norm & Log\_Norm (-2.92, 0.44) \\ 
+  2 & L\_at\_Amin\_Fem\_GP\_1 & 21 & -3.000 & (15, 25) &  &  & No\_prior & None \\ 
+  3 & L\_at\_Amax\_Fem\_GP\_1 & 42 & 2.000 & (35, 45) & OK & 0 & No\_prior & None \\ 
+  4 & VonBert\_K\_Fem\_GP\_1 & 0 & 3.000 & (0.1, 0.4) & OK & 0 & No\_prior & None \\ 
+  5 & CV\_young\_Fem\_GP\_1 & 2 & 5.000 & (0.03, 5) & OK & 0 & No\_prior & None \\ 
+  6 & CV\_old\_Fem\_GP\_1 & 3 & 5.000 & (0.03, 5) & OK & 0 & No\_prior & None \\ 
+  7 & Wtlen\_1\_Fem & 0 & -50.000 & (0, 3) &  &  & No\_prior & None \\ 
+  8 & Wtlen\_2\_Fem & 3 & -50.000 & (2, 4) &  &  & No\_prior & None \\ 
+  9 & Mat50\%\_Fem & 32 & -50.000 & (20, 40) &  &  & No\_prior & None \\ 
+  10 & Mat\_slope\_Fem & -1 & -50.000 & (-2, 4) &  &  & No\_prior & None \\ 
+  11 & Eggs\_scalar\_Fem & 0 & -50.000 & (0, 6) &  &  & No\_prior & None \\ 
+  12 & Eggs\_exp\_len\_Fem & 5 & -50.000 & (-3, 5) &  &  & No\_prior & None \\ 
+  13 & NatM\_p\_1\_Mal\_GP\_1 & 0 & 2.000 & (0, 0.3) & OK & 0 & Normal & Normal (0.05, 0.1) \\ 
+  14 & L\_at\_Amin\_Mal\_GP\_1 & 21 & -2.000 & (6, 68) &  &  & No\_prior & None \\ 
+  15 & L\_at\_Amax\_Mal\_GP\_1 & 39 & 2.000 & (13, 122) & OK & 0 & No\_prior & None \\ 
+  16 & VonBert\_K\_Mal\_GP\_1 & 0 & 3.000 & (0.04, 1.09) & OK & 0 & No\_prior & None \\ 
+  17 & CV\_young\_Mal\_GP\_1 & 2 & 5.000 & (0, 742.07) & OK & 0 & No\_prior & None \\ 
+  18 & CV\_old\_Mal\_GP\_1 & 2 & 5.000 & (0, 742.07) & OK & 0 & No\_prior & None \\ 
+  19 & Wtlen\_1\_Mal & 0 & -50.000 & (0, 3) &  &  & No\_prior & None \\ 
+  20 & Wtlen\_2\_Mal & 3 & -50.000 & (2, 4) &  &  & No\_prior & None \\ 
+  24 & CohortGrowDev & 1 & -50.000 & (0, 2) &  &  & No\_prior & None \\ 
+  25 & FracFemale\_GP\_1 & 0 & -99.000 & (0.000001, 0.999999) &  &  & No\_prior & None \\ 
+  26 & SR\_LN(R0) & 9 & 1.000 & (5, 20) & OK & 0 & No\_prior & None \\ 
+  27 & SR\_BH\_steep & 0 & 2.000 & (0.2, 1) & OK & 0 & Full\_Beta & Full\_Beta (0.7606, 0.146) \\ 
+  28 & SR\_sigmaR & 1 & -6.000 & (0.5, 1.2) &  &  & No\_prior & None \\ 
+  29 & SR\_regime & 0 & -50.000 & (-5, 5) &  &  & No\_prior & None \\ 
+  30 & SR\_autocorr & 0 & -50.000 & (0, 2) &  &  & No\_prior & None \\ 
+  154 & LnQ\_base\_Fishery(1) & -12 & -1.000 & (-15, 15) &  &  & No\_prior & None \\ 
+  155 & LnQ\_base\_POP(4) & 0 & -1.000 & (-15, 15) &  &  & No\_prior & None \\ 
+  156 & LnQ\_base\_Triennial(5) & -1 & -1.000 & (-15, 15) &  &  & No\_prior & None \\ 
+  157 & Q\_extraSD\_Triennial(5) & 0 & -2.000 & (0, 0.5) &  &  & No\_prior & None \\ 
+  158 & LnQ\_base\_AFSCSlope(6) & -1 & -1.000 & (-15, 15) &  &  & No\_prior & None \\ 
+  159 & LnQ\_base\_NWFSCSlope(7) & -2 & -1.000 & (-15, 15) &  &  & No\_prior & None \\ 
+  160 & LnQ\_base\_NWFSCcombo(8) & -1 & -1.000 & (-15, 15) &  &  & No\_prior & None \\ 
+  161 & Q\_extraSD\_NWFSCcombo(8) & 0 & -2.000 & (0, 0.5) &  &  & No\_prior & None \\ 
+  162 & SizeSel\_P1\_Fishery(1) & 38 & 2.000 & (20, 45) & OK & 0 & No\_prior & None \\ 
+  163 & SizeSel\_P2\_Fishery(1) & -5 & -2.000 & (-6, 4) &  &  & No\_prior & None \\ 
+  164 & SizeSel\_P3\_Fishery(1) & 4 & 3.000 & (-1, 9) & OK & 0 & No\_prior & None \\ 
+  165 & SizeSel\_P4\_Fishery(1) & -9 & 3.000 & (-9, 9) & LO & 0 & No\_prior & None \\ 
+  166 & SizeSel\_P5\_Fishery(1) & -4 & 4.000 & (-5, 9) & OK & 0 & No\_prior & None \\ 
+  167 & SizeSel\_P6\_Fishery(1) & 1 & 2.000 & (-5, 9) & OK & 0 & No\_prior & None \\ 
+  168 & Retain\_P1\_Fishery(1) & 29 & 1.000 & (15, 45) & OK & 0 & No\_prior & None \\ 
+  169 & Retain\_P2\_Fishery(1) & 1 & 1.000 & (0.1, 10) & OK & 0 & No\_prior & None \\ 
+  170 & Retain\_P3\_Fishery(1) & 1 & 1.000 & (-10, 10) & OK & 31441 & No\_prior & None \\ 
+  171 & Retain\_P4\_Fishery(1) & 0 & -3.000 & (0, 0) &  &  & No\_prior & None \\ 
+  172 & SizeSel\_P1\_ASHOP(2) & 50 & 2.000 & (20, 49.5) & HI & 0 & No\_prior & None \\ 
+  173 & SizeSel\_P2\_ASHOP(2) & -5 & -2.000 & (-6, 4) &  &  & No\_prior & None \\ 
+  174 & SizeSel\_P3\_ASHOP(2) & 5 & 3.000 & (-1, 9) & OK & 0 & No\_prior & None \\ 
+  175 & SizeSel\_P4\_ASHOP(2) & 1 & 3.000 & (-1, 9) & OK & 6133 & No\_prior & None \\ 
+  176 & SizeSel\_P5\_ASHOP(2) & -5 & 4.000 & (-9, 9) & OK & 3 & No\_prior & None \\ 
+  177 & SizeSel\_P6\_ASHOP(2) & 999 & -2.000 & (-5, 999) &  &  & No\_prior & None \\ 
+  178 & SizeSel\_P1\_POP(4) & 24 & 2.000 & (20, 70) & OK & 3 & No\_prior & None \\ 
+  179 & SizeSel\_P2\_POP(4) & 13 & 3.000 & (0.001, 50) & OK & 5 & No\_prior & None \\ 
+  180 & SizeSel\_P1\_Triennial(5) & 29 & 2.000 & (20, 45) & OK & 4 & No\_prior & None \\ 
+  181 & SizeSel\_P2\_Triennial(5) & -5 & -2.000 & (-6, 4) &  &  & No\_prior & None \\ 
+  182 & SizeSel\_P3\_Triennial(5) & 4 & 3.000 & (-1, 9) & OK & 2 & No\_prior & None \\ 
+  183 & SizeSel\_P4\_Triennial(5) & 2 & 3.000 & (-1, 9) & OK & 3 & No\_prior & None \\ 
+  184 & SizeSel\_P5\_Triennial(5) & -1 & 4.000 & (-5, 9) & OK & 1 & No\_prior & None \\ 
+  185 & SizeSel\_P6\_Triennial(5) & -1 & 2.000 & (-5, 9) & OK & 1 & No\_prior & None \\ 
+  186 & SizeSel\_P1\_AFSCSlope(6) & 37 & 2.000 & (20, 45) & OK & 4 & No\_prior & None \\ 
+  187 & SizeSel\_P2\_AFSCSlope(6) & -5 & -2.000 & (-6, 4) &  &  & No\_prior & None \\ 
+  188 & SizeSel\_P3\_AFSCSlope(6) & 5 & 3.000 & (-1, 9) & OK & 1 & No\_prior & None \\ 
+  189 & SizeSel\_P4\_AFSCSlope(6) & 1 & 3.000 & (-1, 9) & OK & 6133 & No\_prior & None \\ 
+  190 & SizeSel\_P5\_AFSCSlope(6) & -9 & -4.000 & (-9, 9) &  &  & No\_prior & None \\ 
+  191 & SizeSel\_P6\_AFSCSlope(6) & 999 & -2.000 & (-5, 999) &  &  & No\_prior & None \\ 
+  192 & SizeSel\_P1\_NWFSCSlope(7) & 36 & 2.000 & (20, 45) & OK & 3 & No\_prior & None \\ 
+  193 & SizeSel\_P2\_NWFSCSlope(7) & -5 & -2.000 & (-6, 4) &  &  & No\_prior & None \\ 
+  194 & SizeSel\_P3\_NWFSCSlope(7) & 2 & 3.000 & (-1, 9) & OK & 2 & No\_prior & None \\ 
+  195 & SizeSel\_P4\_NWFSCSlope(7) & 1 & 3.000 & (-1, 9) & OK & 6133 & No\_prior & None \\ 
+  196 & SizeSel\_P5\_NWFSCSlope(7) & -9 & -4.000 & (-9, 9) &  &  & No\_prior & None \\ 
+  197 & SizeSel\_P6\_NWFSCSlope(7) & 999 & -2.000 & (-5, 999) &  &  & No\_prior & None \\ 
+  198 & SizeSel\_P1\_NWFSCcombo(8) & 50 & 2.000 & (20, 49.5) & HI & 0 & No\_prior & None \\ 
+  199 & SizeSel\_P2\_NWFSCcombo(8) & -5 & -2.000 & (-6, 4) &  &  & No\_prior & None \\ 
+  200 & SizeSel\_P3\_NWFSCcombo(8) & 7 & 3.000 & (-1, 9) & OK & 1 & No\_prior & None \\ 
+  201 & SizeSel\_P4\_NWFSCcombo(8) & 1 & 3.000 & (-1, 9) & OK & 6133 & No\_prior & None \\ 
+  202 & SizeSel\_P5\_NWFSCcombo(8) & -4 & 4.000 & (-9, 9) & OK & 6 & No\_prior & None \\ 
+  203 & SizeSel\_P6\_NWFSCcombo(8) & 999 & -2.000 & (-5, 999) &  &  & No\_prior & None \\ 
+  204 & Retain\_P3\_Fishery(1)\_BLK1repl\_1918 & 4 & 1.000 & (-10, 10) & OK & 0 & No\_prior & None \\ 
+  205 & Retain\_P3\_Fishery(1)\_BLK1repl\_1992 & 2 & 1.000 & (-10, 10) & OK & 0 & No\_prior & None \\ 
+  206 & Retain\_P3\_Fishery(1)\_BLK1repl\_2002 & 2 & 1.000 & (-10, 10) & OK & 0 & No\_prior & None \\ 
+  207 & Retain\_P3\_Fishery(1)\_BLK1repl\_2008 & 0 & 1.000 & (-10, 10) & OK & 0 & No\_prior & None \\ 
+  208 & Retain\_P3\_Fishery(1)\_BLK1repl\_2011 & 6 & 1.000 & (-10, 10) & OK & 1 & No\_prior & None \\ 
    \hline
 \hline
 \label{tab:model_params}
@@ -2146,75 +2146,75 @@ No. & Parameter & Value & Phase & Bounds & Status & SD & Prior (Exp.Val, SD)  \\
 \newpage
 
 \begin{table}[ht]
-\centering
-\caption{Results from 100 jitters from the base model.} 
-\label{tab:jitter}
-\begin{tabular}{>{\centering}p{2in}>{\centering}p{1in}}
-  \hline
-Status & Base.Model \\ 
-  \hline
-Returned to base case & - \\ 
-  Found local minimum & - \\ 
-  Found better solution & - \\ 
-  Error in likelihood & - \\ 
-  Total & 100 \\ 
-   \hline
-\end{tabular}
-\end{table}
+  \centering
+  \caption{Results from 100 jitters from the base model.} 
+  \label{tab:jitter}
+  \begin{tabular}{>{\centering}p{2in}>{\centering}p{1in}}
+    \hline
+  Status & Base.Model \\ 
+    \hline
+  Returned to base case & - \\ 
+    Found local minimum & - \\ 
+    Found better solution & - \\ 
+    Error in likelihood & - \\ 
+    Total & 100 \\ 
+     \hline
+  \end{tabular}
+  \end{table}
 
 \FloatBarrier
 
 \newpage
 
 \begin{sidewaystable}[ht]
-\centering
-\caption{Sensitivity of the base model 
-                                          to dropping or down-weighting data 
-                                          sources and alternative assumptions 
-                                          about growth.} 
-\label{tab:Sensitivity_model1}
-\scalebox{0.9}{
-\begin{tabular}{l>{\centering}p{.6in}>{\centering}p{.6in}>{\centering}p{.6in}>{\centering}p{.6in}>{\centering}p{.6in}>{\centering}p{.6in}>{\centering}p{.6in}>{\centering}p{.6in}}
-  \hline
-Label & Base (Francis weights) & Harmonic mean weights & Drop index & Drop ages & Down-weight lengths & Free size Age0 & Free CV Amin & External growth \\ 
-  \hline
-TOTAL\_like & - & - & - & - & - & - & - & - \\ 
-  Catch\_like & - & - & - & - & - & - & - & - \\ 
-  Equil\_catch\_like & - & - & - & - & - & - & - & - \\ 
-  Survey\_like & - & - & - & - & - & - & - & - \\ 
-  Length\_comp\_like & - & - & - & - & - & - & - & - \\ 
-  Age\_comp\_like & - & - & - & - & - & - & - & - \\ 
-  Parm\_priors\_like & - & - & - & - & - & - & - & - \\ 
-  SSB\_Unfished\_thousand\_mt & - & - & - & - & - & - & - & - \\ 
-  TotBio\_Unfished & - & - & - & - & - & - & - & - \\ 
-  SmryBio\_Unfished & - & - & - & - & - & - & - & - \\ 
-  Recr\_Unfished\_billions & - & - & - & - & - & - & - & - \\ 
-  SSB\_Btgt\_thousand\_mt & - & - & - & - & - & - & - & - \\ 
-  SPR\_Btgt & - & - & - & - & - & - & - & - \\ 
-  Fstd\_Btgt & - & - & - & - & - & - & - & - \\ 
-  TotYield\_Btgt\_thousand\_mt & - & - & - & - & - & - & - & - \\ 
-  SSB\_SPRtgt\_thousand\_mt & - & - & - & - & - & - & - & - \\ 
-  Fstd\_SPRtgt & - & - & - & - & - & - & - & - \\ 
-  TotYield\_SPRtgt\_thousand\_mt & - & - & - & - & - & - & - & - \\ 
-  SSB\_MSY\_thousand\_mt & - & - & - & - & - & - & - & - \\ 
-  SPR\_MSY & - & - & - & - & - & - & - & - \\ 
-  Fstd\_MSY & - & - & - & - & - & - & - & - \\ 
-  TotYield\_MSY\_thousand\_mt & - & - & - & - & - & - & - & - \\ 
-  RetYield\_MSY & - & - & - & - & - & - & - & - \\ 
-  Bratio\_2015 & - & - & - & - & - & - & - & - \\ 
-  F\_2015 & - & - & - & - & - & - & - & - \\ 
-  SPRratio\_2015 & - & - & - & - & - & - & - & - \\ 
-  Recr\_2015 & - & - & - & - & - & - & - & - \\ 
-  Recr\_Virgin\_billions & - & - & - & - & - & - & - & - \\ 
-  L\_at\_Amin\_Fem\_GP\_1 & - & - & - & - & - & - & - & - \\ 
-  L\_at\_Amax\_Fem\_GP\_1 & - & - & - & - & - & - & - & - \\ 
-  VonBert\_K\_Fem\_GP\_1 & - & - & - & - & - & - & - & - \\ 
-  CV\_young\_Fem\_GP\_1 & - & - & - & - & - & - & - & - \\ 
-  CV\_old\_Fem\_GP\_1 & - & - & - & - & - & - & - & - \\ 
-   \hline
-\end{tabular}
-}
-\end{sidewaystable}
+  \centering
+  \caption{Sensitivity of the base model 
+                                       to dropping or down-weighting data 
+                                       sources and alternative assumptions 
+                                       about growth.} 
+  \label{tab:Sensitivity_model1}
+  \scalebox{0.9}{
+  \begin{tabular}{l>{\centering}p{.6in}>{\centering}p{.6in}>{\centering}p{.6in}>{\centering}p{.6in}>{\centering}p{.6in}>{\centering}p{.6in}>{\centering}p{.6in}>{\centering}p{.6in}}
+    \hline
+  Label & Base (Francis weights) & Harmonic mean weights & Drop index & Drop ages & Down-weight lengths & Free size Age0 & Free CV Amin & External growth \\ 
+    \hline
+  TOTAL\_like & - & - & - & - & - & - & - & - \\ 
+    Catch\_like & - & - & - & - & - & - & - & - \\ 
+    Equil\_catch\_like & - & - & - & - & - & - & - & - \\ 
+    Survey\_like & - & - & - & - & - & - & - & - \\ 
+    Length\_comp\_like & - & - & - & - & - & - & - & - \\ 
+    Age\_comp\_like & - & - & - & - & - & - & - & - \\ 
+    Parm\_priors\_like & - & - & - & - & - & - & - & - \\ 
+    SSB\_Unfished\_thousand\_mt & - & - & - & - & - & - & - & - \\ 
+    TotBio\_Unfished & - & - & - & - & - & - & - & - \\ 
+    SmryBio\_Unfished & - & - & - & - & - & - & - & - \\ 
+    Recr\_Unfished\_billions & - & - & - & - & - & - & - & - \\ 
+    SSB\_Btgt\_thousand\_mt & - & - & - & - & - & - & - & - \\ 
+    SPR\_Btgt & - & - & - & - & - & - & - & - \\ 
+    Fstd\_Btgt & - & - & - & - & - & - & - & - \\ 
+    TotYield\_Btgt\_thousand\_mt & - & - & - & - & - & - & - & - \\ 
+    SSB\_SPRtgt\_thousand\_mt & - & - & - & - & - & - & - & - \\ 
+    Fstd\_SPRtgt & - & - & - & - & - & - & - & - \\ 
+    TotYield\_SPRtgt\_thousand\_mt & - & - & - & - & - & - & - & - \\ 
+    SSB\_MSY\_thousand\_mt & - & - & - & - & - & - & - & - \\ 
+    SPR\_MSY & - & - & - & - & - & - & - & - \\ 
+    Fstd\_MSY & - & - & - & - & - & - & - & - \\ 
+    TotYield\_MSY\_thousand\_mt & - & - & - & - & - & - & - & - \\ 
+    RetYield\_MSY & - & - & - & - & - & - & - & - \\ 
+    Bratio\_2015 & - & - & - & - & - & - & - & - \\ 
+    F\_2015 & - & - & - & - & - & - & - & - \\ 
+    SPRratio\_2015 & - & - & - & - & - & - & - & - \\ 
+    Recr\_2015 & - & - & - & - & - & - & - & - \\ 
+    Recr\_Virgin\_billions & - & - & - & - & - & - & - & - \\ 
+    L\_at\_Amin\_Fem\_GP\_1 & - & - & - & - & - & - & - & - \\ 
+    L\_at\_Amax\_Fem\_GP\_1 & - & - & - & - & - & - & - & - \\ 
+    VonBert\_K\_Fem\_GP\_1 & - & - & - & - & - & - & - & - \\ 
+    CV\_young\_Fem\_GP\_1 & - & - & - & - & - & - & - & - \\ 
+    CV\_old\_Fem\_GP\_1 & - & - & - & - & - & - & - & - \\ 
+     \hline
+  \end{tabular}
+  }
+  \end{sidewaystable}
 
 \newpage
 
@@ -2346,8 +2346,8 @@ Year & Total biomass (mt) & Spawning output (million eggs) (mt) & Summary biomas
 \begin{table}[ht]
 \centering
 \caption{Projection of potential
-                                        OFL, spawning biomass, and depletion for the
-                                        base case model.} 
+                                         OFL, spawning biomass, and depletion for the
+                                         base case model.} 
 \label{tab:Forecast_mod1}
 \begin{tabular}{c>{\centering}p{1in}>{\centering}p{1in}>{\centering}p{1in}>{\centering}p{1in}>{\centering}p{1in}}
   \hline
@@ -2441,7 +2441,7 @@ and open bubbles are negative residuals (observed \textless{} expected).
 \includegraphics{./r4ss/plots_mod1/comp_lenfit_data_weighting_TA1.8_Fishery.png}
 \caption{Francis data weighting method TA1.8 Fishery Suggested sample
 size adjustment (with 95\% interval) for len data from Fishery: 0.8226
-(0.5493\_1.5482)
+(0.5299\_1.5611)
 \label{fig:mod1_4_comp_lenfit_data_weighting_TA1.8_Fishery}}
 \end{figure}
 
@@ -2456,17 +2456,17 @@ size adjustment (with 95\% interval) for len data from Fishery: 0.8226
 
 \begin{center} 
 
-              Figure continued from previous page 
+        Figure continued from previous page 
 
-             \end{center}
+        \end{center}
 
 \includegraphics{./r4ss/plots_mod1/comp_lenfit_residsflt1mkt2_page2.png}
 
 \begin{center} 
 
-              Figure continued from previous page 
+        Figure continued from previous page 
 
-             \end{center}
+        \end{center}
 
 \begin{figure}
 \centering
@@ -2480,7 +2480,7 @@ size adjustment (with 95\% interval) for len data from Fishery: 0.8226
 \includegraphics{./r4ss/plots_mod1/comp_lenfit_data_weighting_TA1.8_Fishery.png}
 \caption{Francis data weighting method TA1.8 Fishery Suggested sample
 size adjustment (with 95\% interval) for len data from Fishery: 0.8226
-(0.5365\_1.5651)
+(0.5458\_1.505)
 \label{fig:mod1_9_comp_lenfit_data_weighting_TA1.8_Fishery}}
 \end{figure}
 
